# c3s-eqc-data-checker

./: .cruft.json  Dockerfile  Makefile  README.md  environment-minver.yml  environment.yml  environment.yml.rej  grib1.nc  grib2.nc  pyproject.toml  setup.cfg  test.nc
.github/workflows/: on-push.yml
c3s_eqc_data_checker/: __init__.py  __main__.py  baseformat.py  check.py  checker.py  cli.py  config.py  file_format.py  grib.py  netcdf.py  overview.py  standard_compliance.py
ci/: environment-ci.yml
docs/: conf.py  index.md
tests/: conftest.py  reanalysis.toml  test_00_version.py  test_10_file_format.py  test_10_netcdf.py  test_10_overview.py  test_20_grib.py  test_20_standard_compliance.py  test_30_config_checker.py  test_40_data_checker.py  test_50_docstrings.py
