[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "cdo",
  "cfgrib",
  "cfunits",
  "dask",
  "netCDF4",
  "pandas",
  "rich",
  "tomli ; python_version<'3.11'",
  "typer",
  "xarray"
]
description = "Data quality checker"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "c3s-eqc-data-checker"
readme = "README.md"

[project.scripts]
data-checker = "c3s_eqc_data_checker.__main__:main"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "eccodes.*",
  "netCDF4.*",
  "cdo.*",
  "cfchecker.*"
]

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: numpy convention
  "D107",
  "D203",
  "D212",
  "D213",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.setuptools]
packages = ["c3s_eqc_data_checker"]

[tool.setuptools_scm]
write_to = "c3s_eqc_data_checker/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
